Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9.2 (TBD)
-----------

- Instead of warning, transform_geom() raises an exception when some points
  can't be reprojected unless the caller opts in to partial reprojection. This
  restores the behavior of version 1.8.22.
- Add support for open options to all CLI commands that call fiona.open
  (#1215).
- Fix a memory leak that can occur when iterating over a dataset using strides
  (#1205).
- ZipMemoryFile now supports zipped GDB data (#1203).

1.9.1 (2023-02-09)
------------------

- Log a warning message when identically named fields are encountered (#1201).
- Avoid dependence on listdir order in tests (#1193).
- Prevent empty geometries arrays from appearing in __geo_interface__ (#1197).
- setuptools added to pyproject.toml. Its pkg_resources module is used by the
  CLI (#1191).

1.9.0 (2023-01-30)
------------------

- CITATION.txt has been replaced by a new CITATION.cff file and the credits
  have been updated.
- In setup.py the distutils (deprecated) logger is no longer used.

1.9b2 (2023-01-22)
------------------

- Add Feature.__geo_interface__ property (#1181).
- Invalid creation options are filtered and ignored (#1180).
- The readme doc has been shortened and freshened up, with a modern example for
  version 1.9.0 (#1174).
- The Geometry class now provides and looks for __geo_interface__ (#1174).
- The top level fiona module now exports Feature, Geometry, and Properties
  (#1174).
- Functions that take Feature or Geometry objects will continue to take dicts
  or objects that provide __geo_interface__ (#1177). This reverses the
  deprecation introduced in 1.9a2.
- Python ignores SIGPIPE by default. By never catching BrokenPipeError via
  `except Exception` when, for example, piping the output of rio-shapes to
  the Unix head program, we avoid getting an unhandled BrokenPipeError message
  when the interpreter shuts down (#2689).

1.9b1 (2022-12-13)